--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
 	<link rel="shortcut icon" href="img/icons/icon-48x48.png" />
 
 	<link rel="canonical" href="https://demo-basic.adminkit.io/" />
-
+	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/jszip-2.5.0/dt-1.13.2/af-2.5.2/b-2.3.4/b-colvis-2.3.4/b-html5-2.3.4/b-print-2.3.4/cr-1.6.1/date-1.3.0/fc-4.2.1/fh-3.3.1/kt-2.8.1/r-2.4.0/rg-1.3.0/rr-1.3.2/sc-2.1.0/sb-1.4.0/sp-2.1.1/sl-1.6.0/sr-1.2.1/datatables.min.css"/>
 	<title>Práctica</title>
 
 	<link href="static/css/app.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 </head>
 
 <body>
@@ -302,7 +303,7 @@
 									<div>
 										<div class="mb-3">
 											<label class="form-label">Nombre</label>
-											<input type="email" class="form-control" placeholder="Email">
+											<input type="date" class="form-control" placeholder="Email">
 										</div>
 										<div class="mb-3">
 											<label class="form-label">Fecha de inicio	</label>
@@ -326,12 +327,12 @@
 							</div>
 						</div>
 						<div class="col-12 col-lg-8 col-xxl-8 d-flex">
-							<div class="card flex-fill">
+							<div class="card flex-fill p-4">
 								<div class="card-header">
 
 									<h5 class="card-title mb-0">Latest Projects</h5>
 								</div>
-								<table class="table table-hover my-0">
+								<table id="data_table" class="table table-hover my-0">
 									<thead>
 										<tr>
 											<th>Nombre</th>
@@ -363,8 +364,16 @@
 	<script src="static/js/app.js"></script>
 	<script src="jquery.js"></script>
 	<script src="app.js"></script>
-	
-
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/pdfmake.min.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/vfs_fonts.js"></script>
+	<script type="text/javascript" src="https://cdn.datatables.net/v/dt/jszip-2.5.0/dt-1.13.2/af-2.5.2/b-2.3.4/b-colvis-2.3.4/b-html5-2.3.4/b-print-2.3.4/cr-1.6.1/date-1.3.0/fc-4.2.1/fh-3.3.1/kt-2.8.1/r-2.4.0/rg-1.3.0/rr-1.3.2/sc-2.1.0/sb-1.4.0/sp-2.1.1/sl-1.6.0/sr-1.2.1/datatables.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+	<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+	<script>
+		$("input[type='date']").flatpickr({
+			mode: "range"
+		});
+	</script>
 </body>
 
 </html>
